[package]
name = "conksat"
version = "0.1.0"
authors = ["Mitsuru Takigahira <mysticdoll@mysticdoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={version = "^1.0.10", features = [ "derive" ]}
serde_json = "^1.0.51"
serde_yaml = "^0.8.11"
regex = "^1.3.6"
getset = "^0.1"
clap = { version = "^2.33", features = ["yaml"] }